--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   <meta name="description"
     content="Aryan is currently a second year undergrad from India. He is enthusiastic about web development and Open-Source." />
   <meta property="og:title" content="Aryan Sharma" />
-  <meta property="og:url" content="https://thepranaygupta.github.io/" />
+  <meta property="og:url" content="https://thearyansharma.github.io/" />
   <meta property="og:description"
     content="Aryan is currently a second year undergrad from India. He is enthusiastic about web development and Open-Source." />
   <meta property="og:image:secure_url"
     content="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png" />
   <meta property="og:image"
     content="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png" />
-  <meta property="profile:username" content="thepranaygupta" />
+  <meta property="profile:username" content="thearyansharma" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Pranay Gupta" />
+  <meta name="twitter:title" content="Aryan Sharma" />
   <meta name="twitter:image"
     content="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png" />
-  <meta name="twitter:url" content="https://thepranaygupta.github.io/" />
+  <meta name="twitter:url" content="https://thearyansharma.github.io/" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
   <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
@@ -94,19 +94,19 @@
       <div class="home_container container grid">
         <div class="home_content grid">
           <div class="home_social">
-            <a href="https://www.linkedin.com/in/thepranaygupta/" class="home_social-icon" target="_blank">
+            <a href="https://www.linkedin.com/in/thearyansharma/" class="home_social-icon" target="_blank">
               <i class="uil uil-linkedin-alt"></i>
             </a>
 
-            <a href="https://github.com/thepranaygupta" class="home_social-icon" target="_blank">
+            <a href="https://github.com/thearyansharma" class="home_social-icon" target="_blank">
               <i class="uil uil-github-alt"></i>
             </a>
 
-            <a href="https://twitter.com/ThePranayGupta/" class="home_social-icon" target="_blank">
+            <a href="https://twitter.com/Thearyansharma/" class="home_social-icon" target="_blank">
               <i class="uil uil-twitter-alt"></i>
             </a>
 
-            <a href="https://www.instagram.com/pranayguptaa/" class="home_social-icon" target="_blank">
+            <a href="https://www.instagram.com/aryansharmaa/" class="home_social-icon" target="_blank">
               <i class="uil uil-instagram"></i>
             </a>
           </div>
@@ -162,7 +162,7 @@
         <img src="./assets/img/about.png" alt="" class="about_img" data-tilt />
         <div class="about_data">
           <p class="about_description">
-            Hi! 👋 I'm Aryan, a 19-year-old engineering sophomore pursuing
+            Hi! 👋 I'm Aryan, a 24-year-old engineering sophomore pursuing
             BTech in Information Technology. I am a passionate self-learner,
             Open source enthusiast, exploring and building projects👨‍💻 using
             various technologies. I am a frontend web developer well versed in
@@ -556,7 +556,7 @@
               <p class="portfolio_description">
                 A Windows 11 UI Clone made using only HTML, CSS & JS.
               </p>
-              <a href="https://thepranaygupta.github.io/Windows-11-UI"
+              <a href="https://thearyansharma.github.io/Windows-11-UI"
                 class="button button-flex button-small portfolio_button" target="_blank">
                 Check out
                 <i class="uil uil-arrow-right button_icon"></i>
@@ -577,7 +577,7 @@
               <p class="portfolio_description">
                 A basic whiteboard built using canvas tag with drawing, undo and clear canvas features.
               </p>
-              <a href="https://thepranaygupta.github.io/White-Board/"
+              <a href="https://thearyansharma.github.io/White-Board/"
                 class="button button-flex button-small portfolio_button" target="_blank">
                 Check out
                 <i class="uil uil-arrow-right button_icon"></i>
@@ -598,7 +598,7 @@
               <p class="portfolio_description">
                 A simple Drum-Kit made using made using only HTML, CSS & JS that can be played using the keyboard.
               </p>
-              <a href="https://thepranaygupta.github.io/Drum-Kit/"
+              <a href="https://thearyansharma.github.io/Drum-Kit/"
                 class="button button-flex button-small portfolio_button" target="_blank">
                 Check out
                 <i class="uil uil-arrow-right button_icon"></i>
@@ -639,7 +639,7 @@
             </div>
           </a>
 
-          <a href="https://calendly.com/thepranaygupta" target="_blank">
+          <a href="https://calendly.com/thearyansharma" target="_blank">
             <div class="contact_info">
               <i class="uil uil-calendar-alt contact_icon"></i>
               <div>
@@ -649,12 +649,12 @@
             </div>
           </a>
 
-          <a href="https://twitter.com/ThePranayGupta/" target="_blank">
+          <a href="https://twitter.com/Thearyansharma/" target="_blank">
             <div class="contact_info">
               <i class="uil uil-twitter-alt contact_icon"></i>
               <div>
                 <h3 class="contact_title">Twitter</h3>
-                <span class="contact_subtitle">@ThePranayGupta</span>
+                <span class="contact_subtitle">@Thearyansharma</span>
               </div>
             </div>
           </a>
@@ -709,7 +709,7 @@
     <div class="footer_bg">
       <div class="footer_container container grid">
         <div>
-          <h1 class="footer_title">Pranay Gupta</h1>
+          <h1 class="footer_title">Aryan Sharma</h1>
           <span class="footer_subtitle">Frontend Developer</span>
         </div>
 
@@ -726,19 +726,19 @@
         </ul>
 
         <div class="footer_socials">
-          <a href="https://www.linkedin.com/in/thepranaygupta/" target="_blank" class="footer_social">
+          <a href="https://www.linkedin.com/in/thearyansharma/" target="_blank" class="footer_social">
             <i class="uil uil-linkedin-alt"></i>
           </a>
-          <a href="https://twitter.com/ThePranayGupta/" target="_blank" class="footer_social">
+          <a href="https://twitter.com/Thearyansharma/" target="_blank" class="footer_social">
             <i class="uil uil-twitter-alt"></i>
           </a>
-          <a href="https://www.instagram.com/pranayguptaa/" target="_blank" class="footer_social">
+          <a href="https://www.instagram.com/aryansharmaa/" target="_blank" class="footer_social">
             <i class="uil uil-instagram"></i>
           </a>
         </div>
       </div>
 
-      <p class="footer_copy">&#169; Pranay Gupta. All rights reserved</p>
+      <p class="footer_copy">&#169; Aryan Sharma. All rights reserved</p>
     </div>
   </footer>
 
