--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>ARYAN SHARMA</title>
-  <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" />
+  <!-- <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" /> -->
+  <link rel="shortcut icon" href="./assets/img/about.png" type="image/x-icon" />
+
   <script src="https://kit.fontawesome.com/4bf48f78b4.js" crossorigin="anonymous"></script>
 </head>
 
@@ -125,7 +127,7 @@
                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                <image class="home_blob-img" x="12" y="8" href="./assets/img/icon.png" />
+                <image class="home_blob-img" x="12" y="8" href="./assets/img/about11.png" />
               </g>
             </svg>
           </div>
@@ -425,8 +427,8 @@
             <!-- BTech IT -->
             <div class="qualification_data">
               <div>
-                <h3 class="qualification_title">BTech Information Technology</h3>
-                <span class="qualification_subtitle">Asansol Engineering College</span>
+                <h3 class="qualification_title">B.Tech.</h3>
+                <span class="qualification_subtitle">XYZ Engineering College</span>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
                   2020 - 2024
@@ -449,11 +451,11 @@
               </div>
 
               <div>
-                <h3 class="qualification_title">Senior Secondary School</h3>
+                <h3 class="qualification_title">XYZ Secondary School</h3>
                 <span class="qualification_subtitle">Loyola School, Taldanga</span>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
-                  2018 - 2020
+                  2017 - 2021
                 </div>
               </div>
             </div>
@@ -461,8 +463,8 @@
             <!-- School 1-10 -->
             <div class="qualification_data">
               <div>
-                <h3 class="qualification_title">Secondary School</h3>
-                <span class="qualification_subtitle">Loyola School, Taldanga</span>
+                <h3 class="qualification_title"> XYZ Secondary School</h3>
+                <span class="qualification_subtitle">XYZ School</span>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
                   2008 - 2018
@@ -634,7 +636,7 @@
               <i class="uil uil-envelope-alt contact_icon"></i>
               <div>
                 <h3 class="contact_title">Email</h3>
-                <span class="contact_subtitle">pgupta@duck.com</span>
+                <span class="contact_subtitle">aryan.sharma10000000.gmail.com</span>
               </div>
             </div>
           </a>
@@ -654,7 +656,7 @@
               <i class="uil uil-twitter-alt contact_icon"></i>
               <div>
                 <h3 class="contact_title">Twitter</h3>
-                <span class="contact_subtitle">@Thearyansharma</span>
+                <span class="contact_subtitle">@aryansharmaind</span>
               </div>
             </div>
           </a>
@@ -664,7 +666,7 @@
               <i class="uil uil-location-point contact_icon"></i>
               <div>
                 <h3 class="contact_title">Location</h3>
-                <span class="contact_subtitle">Kolkata, India</span>
+                <span class="contact_subtitle">India</span>
               </div>
             </div>
           </a>
