--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             <div class="qualification_data">
               <div>
                 <h3 class="qualification_title">B.Tech.</h3>
-                <span class="qualification_subtitle">XYZ Engineering College</span>
+                <span class="qualification_subtitle">Engineering College</span>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
                   2020 - 2024
