--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     content="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png" />
   <meta property="og:image"
     content="https://cdn.bio.link/uploads/profile_pictures/2021-09-01/tE8wirBYKrXgipi0HP0GK69YD9TzfsDY.png" />
-  <meta property="profile:username" content="aryansharmaind" />
+  <meta property="profile:username" content="imvkohli" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Aryan Sharma" />
   <meta name="twitter:image"
@@ -96,7 +96,7 @@
       <div class="home_container container grid">
         <div class="home_content grid">
           <div class="home_social">
-            <a href="https://www.linkedin.com/in/aryansharmaind/" class="home_social-icon" target="_blank">
+            <a href="https://www.linkedin.com/" class="home_social-icon" target="_blank">
               <i class="uil uil-linkedin-alt"></i>
             </a>
 
@@ -104,11 +104,11 @@
               <i class="uil uil-github-alt"></i>
             </a>
 
-            <a href="https://twitter.com/aryansharmaind/" class="home_social-icon" target="_blank">
+            <a href="https://twitter.com/imvkohli/" class="home_social-icon" target="_blank">
               <i class="uil uil-twitter-alt"></i>
             </a>
 
-            <a href="https://www.instagram.com/aryansharmainsta/" class="home_social-icon" target="_blank">
+            <a href="https://www.instagram.com/virat.kohli/" class="home_social-icon" target="_blank">
               <i class="uil uil-instagram"></i>
             </a>
           </div>
@@ -728,13 +728,13 @@
         </ul>
 
         <div class="footer_socials">
-          <a href="https://www.linkedin.com/in/aryansharmaind/" target="_blank" class="footer_social">
+          <a href="https://www.linkedin.com/" target="_blank" class="footer_social">
             <i class="uil uil-linkedin-alt"></i>
           </a>
-          <a href="https://twitter.com/aryansharmaind/" target="_blank" class="footer_social">
+          <a href="https://twitter.com/imvkohli/" target="_blank" class="footer_social">
             <i class="uil uil-twitter-alt"></i>
           </a>
-          <a href="https://www.instagram.com/aryansharmainsta/" target="_blank" class="footer_social">
+          <a href="https://www.instagram.com/virat.kohli/" target="_blank" class="footer_social">
             <i class="uil uil-instagram"></i>
           </a>
         </div>
