--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
               <i class="uil uil-envelope-alt contact_icon"></i>
               <div>
                 <h3 class="contact_title">Email</h3>
-                <span class="contact_subtitle">aryan.sharma10000000.gmail.com</span>
+                <span class="contact_subtitle">virat.kohligmail.com</span>
               </div>
             </div>
           </a>
@@ -656,7 +656,7 @@
               <i class="uil uil-twitter-alt contact_icon"></i>
               <div>
                 <h3 class="contact_title">Twitter</h3>
-                <span class="contact_subtitle">aryansharmaind</span>
+                <span class="contact_subtitle">imvkohli</span>
               </div>
             </div>
           </a>
