--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             of React.
           </p>
           <div class="about_button">
-            <a download="" href="https://drive.google.com/file/d/1IwuzyxZhngppVH0m0F6f5dNnjpzXtS7Y/view" class="button button--flex" target="_blank">
+            <a download="" href="https://drive.google.com/drive/folders/1JFfwcaJG2TbwKkfWdkYF_BVAyj7vAFU7">
               Resume<i class="uil uil-file-download-alt button_icon"></i>
             </a>
           </div>
