--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
             </div>
           </a>
 
-          <a href="https://twitter.com/aryansharmaind/" target="_blank">
+          <a href="https://twitter.com/imvkohli/" target="_blank">
             <div class="contact_info">
               <i class="uil uil-twitter-alt contact_icon"></i>
               <div>
