--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
     <div class="footer_bg">
       <div class="footer_container container grid">
         <div>
-          <h1 class="footer_title">Aryan Sh</h1>
+          <h1 class="footer_title">Aryan Sharma</h1>
           <span class="footer_subtitle">Frontend Developer</span>
         </div>
 
