--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
   <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>ARYAN SHARMA</title>
+  <title>
+    UMESH KUMAR
+  </title>
+
   <!-- <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" /> -->
   <link rel="shortcut icon" href="./assets/img/about.png" type="image/x-icon" />
 
@@ -40,7 +43,7 @@
   <!-- Header -->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav_logo">ARYAN</a>
+      <a href="#" class="nav_logo">UMESH</a>
 
       <div class="nav_menu" id="nav-menu">
         <ul class="nav_list grid">
@@ -96,19 +99,19 @@
       <div class="home_container container grid">
         <div class="home_content grid">
           <div class="home_social">
-            <a href="https://www.linkedin.com/" class="home_social-icon" target="_blank">
+            <a href="https://www.linkedin.com/in/umesh-mahato/" class="home_social-icon" target="_blank">
               <i class="uil uil-linkedin-alt"></i>
             </a>
 
-            <a href="https://github.com/aryansharmagithub" class="home_social-icon" target="_blank">
+            <a href="https://github.com/Umesh-Mahto" class="home_social-icon" target="_blank">
               <i class="uil uil-github-alt"></i>
             </a>
 
-            <a href="https://twitter.com/imvkohli/" class="home_social-icon" target="_blank">
+            <a href="https://twitter.com/UmeshMa19190366" class="home_social-icon" target="_blank">
               <i class="uil uil-twitter-alt"></i>
             </a>
 
-            <a href="https://www.instagram.com/virat.kohli/" class="home_social-icon" target="_blank">
+            <a href="https://www.instagram.com/12_mahato_12/" class="home_social-icon" target="_blank">
               <i class="uil uil-instagram"></i>
             </a>
           </div>
@@ -127,14 +130,14 @@
                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                <image class="home_blob-img" x="12" y="8" href="./assets/img/about11.png" />
+                <image class="home_blob-img" x="12" y="8" href="./assets/img/about.jpg" />
               </g>
             </svg>
           </div>
 
           <div class="home_data">
-            <h1 class="home_title">Hi, I'm Aryan</h1>
-            <h3 class="home_subtitle">I am <span class="type"></span> Developer</h3>
+            <h1 class="home_title">Hi, I'm Umesh</h1>
+            <h3 class="home_subtitle">I am <span ></span> Developer</h3>
 
             <p class="home_description">
               Open-Source enthusiast and self learner, believes in the power of community.
@@ -161,18 +164,15 @@
       <h2 class="section_title">About Me</h2>
       <span class="section_subtitle">My introduction</span>
       <div class="about_container container grid">
-        <img src="./assets/img/about.png" alt="" class="about_img" data-tilt />
+        <img src="./assets/img/about.jpg" alt="" class="about_img" data-tilt />
         <div class="about_data">
           <p class="about_description">
-            Hi! 👋 I'm Aryan, a 24-year-old engineering sophomore pursuing
-            BTech in Information Technology. I am a passionate self-learner,
+            Hi! 👋 I'm Umesh, a 24-year-old engineering Graudate I am a passionate self-learner,
             Open source enthusiast, exploring and building projects👨‍💻 using
-            various technologies. I am a frontend web developer well versed in
-            HTML, CSS, JavaScript and stand at a beginner-intermediate level
-            of React.
+            various technologies like JAVA, HTML, CSS, JavaScript.
           </p>
           <div class="about_button">
-            <a download="" href="./AryanGeekster.docx+(2) (1) (1).pdf" class="button button--flex" target="_blank">
+            <a download="" href="./UmeshResume.pdf" class="button button--flex" target="_blank">
               Resume<i class="uil uil-file-download-alt button_icon"></i>
             </a>
           </div>
@@ -205,16 +205,6 @@
                   <i class="fab fa-java"></i>
                 </span>
                 <h3 class="skills_name">Java</h3>
-              </div>
-              <div class="skills_bar"></div>
-            </div>
-
-            <div class="skills_data">
-              <div class="skills_titles">
-                <span class="single_skill_icon">
-                  <i class="fab fa-python"></i>
-                </span>
-                <h3 class="skills_name">Python</h3>
               </div>
               <div class="skills_bar"></div>
             </div>
@@ -278,50 +268,9 @@
             <div class="skills_data">
               <div class="skills_titles">
                 <span class="single_skill_icon">
-                  <i class="fab fa-react"></i>
-                </span>
-                <h3 class="skills_name">ReactJS</h3>
-              </div>
-              <div class="skills_bar"></div>
-            </div>
-
-            <div class="skills_data">
-              <div class="skills_titles">
-                <span class="single_skill_icon">
-                  <i class="fab fa-node-js"></i>
-                </span>
-                <h3 class="skills_name">NodeJS</h3>
-              </div>
-              <div class="skills_bar"></div>
-            </div>
-
-            <div class="skills_data">
-              <div class="skills_titles">
-                <span class="single_skill_icon">
                   <i class="fab fa-bootstrap"></i>
                 </span>
                 <h3 class="skills_name">Bootstrap</h3>
-              </div>
-              <div class="skills_bar"></div>
-            </div>
-
-            <div class="skills_data">
-              <div class="skills_titles">
-                <span class="single_skill_icon external-logo">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 54 33">
-                    <g clip-path="url(#prefix__clip0)">
-                      <path fill="#6E57E0" fill-rule="evenodd"
-                        d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z"
-                        clip-rule="evenodd" />
-                    </g>
-                    <defs>
-                      <clipPath id="prefix__clip0">
-                        <path fill="#fff" d="M0 0h54v32.4H0z" />
-                      </clipPath>
-                    </defs>
-                  </svg>
-                </span>
-                <h3 class="skills_name">Tailwind CSS</h3>
               </div>
               <div class="skills_bar"></div>
             </div>
@@ -364,10 +313,10 @@
 
             <div class="skills_data">
               <div class="skills_titles">
-                <span class="single_skill_icon external-logo">
-                  <img src="./assets/img/Firebase.png" alt="">
+                <span class="single_skill_icon">
+                  <i class="fab fa-github"></i>
                 </span>
-                <h3 class="skills_name">Firebase</h3>
+                <h3 class="skills_name">Visual Studio Code</h3>
               </div>
               <div class="skills_bar"></div>
             </div>
@@ -375,30 +324,44 @@
             <div class="skills_data">
               <div class="skills_titles">
                 <span class="single_skill_icon">
-                  <i class="fab fa-figma"></i>
+                  <i class="fab fa-github"></i>
                 </span>
-                <h3 class="skills_name">Figma</h3>
+                <h3 class="skills_name">GoormIde</h3>
               </div>
               <div class="skills_bar"></div>
             </div>
 
             <div class="skills_data">
               <div class="skills_titles">
-                <span class="single_skill_icon external-logo">
-                  <svg viewBox="0 0 240 234" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M42.5 0h155C221 0 240 19 240 42.5v149c0 23.5-19 42.5-42.5 42.5h-155C19 234 0 215 0 191.5v-149C0 19 19 0 42.5 0z"
-                      fill="#6e57e0" />
-                    <g fill="#fff">
-                      <path
-                        d="M126.2 61.5l-30 49.5 32 52.5c.2.4.3.8.2 1.2s-.5.1-1.1.2h-22.9c-1.6 0-2.7-.1-3.4-1.1-2.1-4.2-4.3-8.3-6.4-12.5-2.1-4.1-4.4-8.3-6.8-12.6s-4.8-8.6-7.2-13h-.2c-2.1 4.3-4.4 8.6-6.7 12.9s-4.6 8.6-6.8 12.8c-2.3 4.2-4.6 8.5-6.9 12.6-.4 1-1.2 1.1-2.3 1.1h-22c-.4 0-.7.2-.7-.3-.1-.4 0-.8.2-1.1l31.1-51L36 61.4c-.3-.4-.4-.8-.2-1 .2-.3.6-.4 1-.4h22.7c.5 0 1 .1 1.4.2.4.2.7.5 1 .9 1.9 4.3 4.1 8.6 6.4 12.9 2.4 4.3 4.7 8.5 7.2 12.7 2.4 4.2 4.6 8.4 6.7 12.7h.2c2.1-4.4 4.3-8.7 6.5-12.9s4.5-8.4 6.8-12.6 4.5-8.5 6.7-12.6c.1-.4.3-.8.6-1 .4-.2.8-.3 1.3-.2h21.1c.5-.1 1 .2 1.1.7.1.1-.1.5-.3.7zM172.4 167c-7.4.1-14.8-1.4-21.5-4.5-6.3-2.9-11.5-7.7-15.1-13.6-3.7-6.1-5.5-13.7-5.5-22.8-.1-7.4 1.8-14.7 5.5-21.1 3.8-6.5 9.3-11.9 15.9-15.5 7-3.9 15.4-5.8 25.3-5.8.5 0 1.2 0 2.1.1s1.9.1 3.1.2V52.4c0-.7.3-1.1 1-1.1h20.3c.5-.1.9.3 1 .7v95.4c0 1.8.1 3.8.2 6 .2 2.1.3 4.1.4 5.8 0 .7-.3 1.3-1 1.6-5.2 2.2-10.7 3.8-16.3 4.8-5.1.9-10.2 1.4-15.4 1.4zm9.8-20v-44c-.9-.2-1.8-.4-2.7-.5-1.1-.1-2.2-.2-3.3-.2-3.9 0-7.8.8-11.3 2.6-3.4 1.7-6.3 4.2-8.5 7.4s-3.3 7.5-3.3 12.7c-.1 3.5.5 7 1.7 10.3 1 2.7 2.5 5.1 4.5 7.1 1.9 1.8 4.2 3.2 6.8 4 2.7.9 5.5 1.3 8.3 1.3 1.5 0 2.9-.1 4.2-.2 1.3.1 2.4-.1 3.6-.5z" />
-                    </g>
-                  </svg>
+                <span class="single_skill_icon">
+                  <i class="fab fa-github"></i>
                 </span>
-                <h3 class="skills_name">Adobe XD</h3>
+                <h3 class="skills_name">Agile</h3>
               </div>
               <div class="skills_bar"></div>
             </div>
+
+            <div class="skills_data">
+              <div class="skills_titles">
+                <span class="single_skill_icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <h3 class="skills_name">BitBucket</h3>
+              </div>
+              <div class="skills_bar"></div>
+            </div>
+
+            <div class="skills_data">
+              <div class="skills_titles">
+                <span class="single_skill_icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <h3 class="skills_name">GitLab</h3>
+              </div>
+              <div class="skills_bar"></div>
+            </div>
+
+            
           </div>
         </div>
 
@@ -428,10 +391,10 @@
             <div class="qualification_data">
               <div>
                 <h3 class="qualification_title">B.Tech.</h3>
-                <span class="qualification_subtitle">Engineering College</span>
+                <span class="qualification_subtitle">Rajiv Gandhi Proudyogiki Vishwavidyalaya</span>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
-                  2020 - 2024
+                  2017 - 2021
                 </div>
               </div>
 
@@ -451,11 +414,10 @@
               </div>
 
               <div>
-                <h3 class="qualification_title">XYZ Secondary School</h3>
-                <span class="qualification_subtitle">Loyola School, Taldanga</span>
+                <h3 class="qualification_title">Jharkhand Academic Council(HSC)</h3>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
-                  2017 - 2021
+                  2016 - 2017
                 </div>
               </div>
             </div>
@@ -463,11 +425,10 @@
             <!-- School 1-10 -->
             <div class="qualification_data">
               <div>
-                <h3 class="qualification_title"> XYZ Secondary School</h3>
-                <span class="qualification_subtitle">XYZ School</span>
+                <h3 class="qualification_title">Jharkhand Academic Council(SSC)</h3>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
-                  2008 - 2018
+                  2014 - 2015
                 </div>
               </div>
               <div>
@@ -636,27 +597,19 @@
               <i class="uil uil-envelope-alt contact_icon"></i>
               <div>
                 <h3 class="contact_title">Email</h3>
-                <span class="contact_subtitle">virat.kohligmail.com</span>
+                <span class="contact_subtitle">umeshkr846@gmail.com</span>
               </div>
             </div>
           </a>
 
-          <a href="https://calendly.com/aryansharmaind" target="_blank">
-            <div class="contact_info">
-              <i class="uil uil-calendar-alt contact_icon"></i>
-              <div>
-                <h3 class="contact_title">Online Meet</h3>
-                <span class="contact_subtitle">Schedule an Online Meet</span>
-              </div>
-            </div>
-          </a>
+          
 
-          <a href="https://twitter.com/imvkohli/" target="_blank">
+          <a href="https://twitter.com/UmeshMa19190366" target="_blank">
             <div class="contact_info">
               <i class="uil uil-twitter-alt contact_icon"></i>
               <div>
                 <h3 class="contact_title">Twitter</h3>
-                <span class="contact_subtitle">imvkohli</span>
+                <span class="contact_subtitle">UmeshMa19190366</span>
               </div>
             </div>
           </a>
@@ -711,8 +664,8 @@
     <div class="footer_bg">
       <div class="footer_container container grid">
         <div>
-          <h1 class="footer_title">Aryan Sharma</h1>
-          <span class="footer_subtitle">Frontend Developer</span>
+          <h1 class="footer_title">Umesh Kumar</h1>
+          <span class="footer_subtitle">Software Developer</span>
         </div>
 
         <ul class="footer_links">
@@ -728,19 +681,19 @@
         </ul>
 
         <div class="footer_socials">
-          <a href="https://www.linkedin.com/" target="_blank" class="footer_social">
+          <a href="https://www.linkedin.com/in/umesh-mahato" target="_blank" class="footer_social">
             <i class="uil uil-linkedin-alt"></i>
           </a>
-          <a href="https://twitter.com/imvkohli/" target="_blank" class="footer_social">
+          <a href="https://twitter.com/UmeshMa19190366" target="_blank" class="footer_social">
             <i class="uil uil-twitter-alt"></i>
           </a>
-          <a href="https://www.instagram.com/virat.kohli/" target="_blank" class="footer_social">
+          <a href="https://www.instagram.com/12_mahato_12/" target="_blank" class="footer_social">
             <i class="uil uil-instagram"></i>
           </a>
         </div>
       </div>
 
-      <p class="footer_copy">&#169; Aryan Sharma. All rights reserved</p>
+      <p class="footer_copy">&#169; Umesh Kumar. All rights reserved</p>
     </div>
   </footer>
 
